B-F Backup Sandbox 30.4.12/src/objects/Promotion_Result__c.object
<CustomObject>
    <fields>
        <fullName>Approached__c</fullName>
        <description>INFOWELDERS</description>
        <label>Approached</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <description>INFOWELDERS</description>
        <label>Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for Product Remediation process</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Promotion Results</relationshipLabel>
        <relationshipName>Promotion_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Females__c</fullName>
        <description>INFOWELDERS</description>
        <label>Females</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <description>INFOWELDERS</description>
        <label>Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Results</relationshipLabel>
        <relationshipName>Promotion_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Comments__c</fullName>
        <description>INFOWELDERS</description>
        <label>Promotion Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <inlineHelpText>The promo company that worked to execute promotion and collect results.</inlineHelpText>
        <label>Promotion Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotion Results</relationshipLabel>
        <relationshipName>Promotion_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Results__c</fullName>
        <description>INFOWELDERS</description>
        <label>Promotion Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Volume_Results__c</fullName>
        <description>INFOWELDERS</description>
        <label>Promotion Volume Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <description>Infowelders</description>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Results</relationshipLabel>
        <relationshipName>Promotion_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <description>INFOWELDERS</description>
        <label>Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result_Date__c</fullName>
        <description>Infowelders</description>
        <inlineHelpText>Date the result data was collected (event date).</inlineHelpText>
        <label>Result Date</label>
        <type>Date</type>
    </fields>
    <label>Promotion Result</label>
    <nameField>
        <displayFormat>RES-{YYYY}{000000}</displayFormat>
        <label>Promotion Result #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>